# explore-geo

./: pyproject.toml
explore_geo/: geopackage_pyogrio.ipynb  test.gpkg  test_2.gpkg  test_new.gpkg
