[tool.poetry]
name = "explore-geo"
version = "0.1.0"
description = ""
authors = ["Ismail Sunni <imajimatika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.2"
pyogrio = "^0.7.2"
ipykernel = "^6.28.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
